vendor/vnc/Viewer.h



/**
 * Disconnects this viewer from the server.  Sets the disconnection reason to
 * @c ViewerClosedConnection.  This method does nothing if the viewer is not
 * currently connected.  Once disconnected you may subsequently connect the
 * viewer to the same server again.
 *
 * @param viewer The Viewer.
 *
 * @return #vnc_success.
 */
VNC_SDK_API vnc_status_t vnc_Viewer_disconnect(vnc_Viewer* viewer);


/**
 * Returns a string ID representing the reason for the last viewer
 * disconnection.  Returns NULL if there have not been any disconnections, or
 * the viewer has been connected again since the last disconnection.
 *
 * Some of the connection reasons are sent by the server to explain the reason
 * for ending the connection.  These disconnection reasons are free-form and a
 * third-party server may send reasons not on this list.  To help diagnosing the
 * cause of the disconnection, vnc_Viewer_getDisconnectMessage() can be used to
 * get a human-readable message sent by the server which explains the reason.
 * Possible reasons sent by the server are:
 *
 *  - @c AuthFailure: the viewer user did not provide appropriate credentials
 *  - @c ConnTimeout: the connection reached its maximum duration
 *  - @c IdleTimeout: the connection timed out after no activity.  This can
 *    happen when the connection is being established if the requested
 *    credentials are not sent within a reasonable amount of time.
 *  - @c ServerShutdown: the server process has shut down (the disconnection
 *    message may include further details)
 *  - @c ServerSuspended: the server machine is going in suspend mode
 *  - @c TooManySecFail: too many security failures have occurred in a short
 *    space of time, so the server has rejected the connection
 *  - @c UserSwitch: the server machine is switching desktops, causing a
 *    temporary disconnection.
 *
 * In addition, @c ServerClosedConnection indicates a normal disconnection
 * initiated by the server.
 *
 * Some of the reasons occur when the viewer initiates the disconnection, in
 * which case the list of possible disconnection reasons is known in advance.
 * Possible reasons known to the viewer are:
 *
 *  - @c CloudAuthenticationFailed: the Cloud password or address is incorrect
 *  - @c CloudConnectionRefused: the local Cloud address does not have
 *    permission to connect to the server's Cloud address
 *  - @c CloudTargetNotFound: there is no server listening on the Cloud address
 *  - @c DataStoreError: there is no data store
 *  - @c ViewerCancelledAuthentication: authentication was cancelled by calling
 *    vnc_Viewer_sendAuthenticationResponse() with @c ok as #vnc_false
 *  - @c ViewerClosedConnection: the connection was closed by calling
 *    vnc_Viewer_disconnect()
 *  - @c ViewerRejectedConnection: the connection was rejected by the viewer not
 *    accepting the connection security or peer identity via the
 *    vnc_Viewer_PeerVerificationCallback::verifyPeer callback.
 *
 * Finally, some of the reasons can occur both from the viewer or server, or
 * somewhere in between! Possible reasons are:
 *
 *  - @c ConnectivityError: a connection to the server could not be established,
 *    or there was an error reading or writing to the peer
 *  - @c ConnectionDropped: the connection was closed at the transport level,
 *    with no closing handshake
 *  - @c ConnectionNegotiationError: the connection could not be established due
 *    to an error during negotiation with the peer; consult the debug logs for
 *    more information.
 *  - @c ConnectionResolveError: a specified Direct TCP hostname or IP address
 *    is malformed, or is not legitimate (e.g. DNS lookup fails), or the
 *    resolver service cannot be reached; consult the debug logs for more
 *    information.
 *
 * If cause is not recognized, the reason will be @c Unknown; please consult the
 * debug logs for more information on the underlying cause of the disconnection.
 */
VNC_SDK_API _Ret_opt_z_ const char*
vnc_Viewer_getDisconnectReason(vnc_Viewer* viewer);


/**
 * Returns a human-readable message sent by the server for the last
 * disconnection, or NULL if the last disconnection was not initiated by the
 * server.  If the reason for the disconnection originated at the viewer end
 * then there is no message, since the reason string comes from a known set of
 * possibilities.
 */
VNC_SDK_API _Ret_opt_z_ const char*
vnc_Viewer_getDisconnectMessage(vnc_Viewer* viewer);



/**
 * @}
 * @name Functions for managing the framebuffer
 * @{
 */

/** Callback receiving framebuffer event notifications for a Viewer. */
typedef struct {
  /**
   * Notification that the server's framebuffer size has changed.  You may
   * choose to resize the viewer framebuffer by calling vnc_Viewer_setViewerFb()
   * from this function, for example, to maintain a consistent aspect ratio.
   * This callback is optional.
   *
   * @param w The width of the server's framebuffer.
   * @param h The height of the server's framebuffer.
   */
  void
  (*serverFbSizeChanged)(void* userData,
                         vnc_Viewer* viewer,
                         int w, int h);

  /**
   * Notification that the given rectangle of the viewer's framebuffer has been
   * updated with new pixel data.  This callback is optional.
   */
  void
  (*viewerFbUpdated)(void* userData,
                     vnc_Viewer* viewer,
                     int x, int y, int w, int h);
} vnc_Viewer_FramebufferCallback;


/**
 * Sets the framebuffer callback for this viewer.
 *
 * @param viewer The Viewer.
 * @param callback The new framebuffer callback.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 *
 * @retval InvalidArgument
 *     The callback is invalid
 */
VNC_SDK_API vnc_status_t
vnc_Viewer_setFramebufferCallback(
    vnc_Viewer* viewer,
    _In_opt_ const vnc_Viewer_FramebufferCallback* callback,
    void* userData);


/**
 * Sets the viewer framebuffer.  The pixel data received from the server will
 * be rendered into the buffer in the given pixel format, scaled to fit the
 * given size, and with the given stride.
 *
 * @param viewer The Viewer.
 * @param pixels Pointer to the framebuffer to receive pixel data.  The buffer
 *     must be large enough, i.e.  stride * height pixels.  Alternatively, pass
 *     NULL for a buffer owned by the SDK to be allocated for you.
 * @param pixelsBytes The size in bytes of the buffer pointed to by @p pixels
 *     (ignored if @p pixels is NULL).
 * @param pf Pixel format for the pixel data.
 * @param width The width of the framebuffer.
 * @param height The height of the framebuffer
 * @param stride The stride of the framebuffer, i.e.  the number of pixels from
 *     the start of one row to the next.  If specified as zero then the width is
 *     used.  Note that this is specified in terms of pixels, not bytes.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 *
 * @retval InvalidArgument
 *     @p width or @p height is zero or negative, the stride is invalid, or the
 *     @p pixels buffer is not large enough
 */
VNC_SDK_API vnc_status_t
vnc_Viewer_setViewerFb(vnc_Viewer* viewer,
                       _Out_writes_bytes_(pixelsBytes) void* pixels,
                       int pixelsBytes,
                       const vnc_PixelFormat* pf,
                       int width, int height,
                       int stride);


/** Gets the width of the viewer framebuffer. */
VNC_SDK_API int vnc_Viewer_getViewerFbWidth(vnc_Viewer* viewer);


/** Gets the height of the viewer framebuffer. */
VNC_SDK_API int vnc_Viewer_getViewerFbHeight(vnc_Viewer* viewer);


/** Gets the pixel format of the viewer framebuffer. */
VNC_SDK_API const vnc_PixelFormat*
vnc_Viewer_getViewerFbPixelFormat(vnc_Viewer* viewer);


/**
 * Returns the viewer framebuffer data for the given rectangle.  The returned
 * object is valid until the next call to vnc_Viewer_getViewerFbData() or
 * vnc_Viewer_setViewerFb().  The stride of the data is given by
 * vnc_Viewer_getViewerFbStride().
 *
 * @param viewer The Viewer.
 * @param x The left edge of the rectangle.
 * @param y The top edge of the rectangle.
 * @param w The width of the rectangle.
 * @param h The height of the rectangle.
 *
 * @return Returns the data buffer, or NULL on error, in which case call
 *     vnc_getLastError() to get the error code.
 *
 * @retval InvalidArgument
 *     @c w or @c h are zero or negative, or the rectangle is not fully
 *     contained within the framebuffer
 */
VNC_SDK_API const vnc_DataBuffer*
vnc_Viewer_getViewerFbData(vnc_Viewer* viewer,
                           int x, int y, int w, int h);


/**
 * Returns the stride of the viewer framebuffer data in pixels, that is, the
 * number of pixels from the start of each row until the start of the next.
 *
 * @param viewer The Viewer.
 *
 * @return The stride in pixels.
 */
VNC_SDK_API int vnc_Viewer_getViewerFbStride(vnc_Viewer* viewer);


/**
 * Provides the SDK with the result of a username/password request.
 *
 * @param viewer The Viewer.
 * @param ok This should be #vnc_false if the user cancelled the password
 *     dialog.
 * @param user This must not be NULL if @p needUser was @p vnc_true in the
 *     username/password request, otherwise it is ignored.
 * @param passwd This must not be NULL if @p needPasswd was @p vnc_true in the
 *     username/password request, otherwise it is ignored.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 *
 * @retval UnexpectedCall
 *     The session is not waiting for a username/password response
 *
 * @retval InvalidArgument
 *     @c user or @c passwd was requested but is NULL
 */
VNC_SDK_API vnc_status_t
vnc_Viewer_sendAuthenticationResponse(vnc_Viewer* viewer,
                                      vnc_bool_t ok,
                                      _In_opt_z_ const char* user,
                                      _In_opt_z_ const char* passwd);


/** Callback receiving verification requests to check the peer's identity. */
typedef struct {
  /**
   * Request to verify the identity of the peer (the server).  Implementors
   * should respond by calling vnc_Viewer_sendPeerVerificationResponse().  This
   * callback function is required if using a
   * @ref vnc_Viewer_PeerVerificationCallback.
   *
   * Apart from cancelPeerVerification, no further callbacks (such as
   * disconnected) will be issued for this connection until peer verification
   * has been completed succesfully.
   *
   * @param hexFingerprint The hash of the server's fingerprint, as a string of
   *     hexadecimal digits.
   * @param catchphraseFingerprint The hash of the server's fingerprint, as a
   *     catchphrase.
   * @param serverRsaPublic The server's public key, in the format returned by
   *     vnc_RsaKey_getDetails().
   */
  void
  (*verifyPeer)(void* userData,
                vnc_Viewer* viewer,
                const char* hexFingerprint,
                const char* catchphraseFingerprint,
                const vnc_DataBuffer* serverRsaPublic);

  /**
   * Notification to cancel a prior request for peer verification.  This can
   * happen if the server closes the connection while peer verification is in
   * progress.  This callback is optional.
   */
  void
  (*cancelPeerVerification)(void* userData,
                            vnc_Viewer* viewer);
} vnc_Viewer_PeerVerificationCallback;