src/viewer.rs

extern "C" {
    #[doc = " Returns a string ID representing the reason for the last viewer"]
    #[doc = " disconnection.  Returns NULL if there have not been any disconnections, or"]
    #[doc = " the viewer has been connected again since the last disconnection."]
    #[doc = ""]
    #[doc = " Some of the connection reasons are sent by the server to explain the reason"]
    #[doc = " for ending the connection.  These disconnection reasons are free-form and a"]
    #[doc = " third-party server may send reasons not on this list.  To help diagnosing the"]
    #[doc = " cause of the disconnection, vnc_Viewer_getDisconnectMessage() can be used to"]
    #[doc = " get a human-readable message sent by the server which explains the reason."]
    #[doc = " Possible reasons sent by the server are:"]
    #[doc = ""]
    #[doc = "  - @c AuthFailure: the viewer user did not provide appropriate credentials"]
    #[doc = "  - @c ConnTimeout: the connection reached its maximum duration"]
    #[doc = "  - @c IdleTimeout: the connection timed out after no activity.  This can"]
    #[doc = "    happen when the connection is being established if the requested"]
    #[doc = "    credentials are not sent within a reasonable amount of time."]
    #[doc = "  - @c ServerShutdown: the server process has shut down (the disconnection"]
    #[doc = "    message may include further details)"]
    #[doc = "  - @c ServerSuspended: the server machine is going in suspend mode"]
    #[doc = "  - @c TooManySecFail: too many security failures have occurred in a short"]
    #[doc = "    space of time, so the server has rejected the connection"]
    #[doc = "  - @c UserSwitch: the server machine is switching desktops, causing a"]
    #[doc = "    temporary disconnection."]
    #[doc = ""]
    #[doc = " In addition, @c ServerClosedConnection indicates a normal disconnection"]
    #[doc = " initiated by the server."]
    #[doc = ""]
    #[doc = " Some of the reasons occur when the viewer initiates the disconnection, in"]
    #[doc = " which case the list of possible disconnection reasons is known in advance."]
    #[doc = " Possible reasons known to the viewer are:"]
    #[doc = ""]
    #[doc = "  - @c CloudAuthenticationFailed: the Cloud password or address is incorrect"]
    #[doc = "  - @c CloudConnectionRefused: the local Cloud address does not have"]
    #[doc = "    permission to connect to the server's Cloud address"]
    #[doc = "  - @c CloudTargetNotFound: there is no server listening on the Cloud address"]
    #[doc = "  - @c DataStoreError: there is no data store"]
    #[doc = "  - @c ViewerCancelledAuthentication: authentication was cancelled by calling"]
    #[doc = "    vnc_Viewer_sendAuthenticationResponse() with @c ok as #vnc_false"]
    #[doc = "  - @c ViewerClosedConnection: the connection was closed by calling"]
    #[doc = "    vnc_Viewer_disconnect()"]
    #[doc = "  - @c ViewerRejectedConnection: the connection was rejected by the viewer not"]
    #[doc = "    accepting the connection security or peer identity via the"]
    #[doc = "    vnc_Viewer_PeerVerificationCallback::verifyPeer callback."]
    #[doc = ""]
    #[doc = " Finally, some of the reasons can occur both from the viewer or server, or"]
    #[doc = " somewhere in between! Possible reasons are:"]
    #[doc = ""]
    #[doc = "  - @c ConnectivityError: a connection to the server could not be established,"]
    #[doc = "    or there was an error reading or writing to the peer"]
    #[doc = "  - @c ConnectionDropped: the connection was closed at the transport level,"]
    #[doc = "    with no closing handshake"]
    #[doc = "  - @c ConnectionNegotiationError: the connection could not be established due"]
    #[doc = "    to an error during negotiation with the peer; consult the debug logs for"]
    #[doc = "    more information."]
    #[doc = "  - @c ConnectionResolveError: a specified Direct TCP hostname or IP address"]
    #[doc = "    is malformed, or is not legitimate (e.g. DNS lookup fails), or the"]
    #[doc = "    resolver service cannot be reached; consult the debug logs for more"]
    #[doc = "    information."]
    #[doc = ""]
    #[doc = " If cause is not recognized, the reason will be @c Unknown; please consult the"]
    #[doc = " debug logs for more information on the underlying cause of the disconnection."]
    pub fn vnc_Viewer_getDisconnectReason(viewer: *mut vnc_Viewer)
        -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Returns a human-readable message sent by the server for the last"]
    #[doc = " disconnection, or NULL if the last disconnection was not initiated by the"]
    #[doc = " server.  If the reason for the disconnection originated at the viewer end"]
    #[doc = " then there is no message, since the reason string comes from a known set of"]
    #[doc = " possibilities."]
    pub fn vnc_Viewer_getDisconnectMessage(
        viewer: *mut vnc_Viewer,
    ) -> *const ::std::os::raw::c_char;
}
#[doc = " Callback receiving framebuffer event notifications for a Viewer."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vnc_Viewer_FramebufferCallback {
    #[doc = " Notification that the server's framebuffer size has changed.  You may"]
    #[doc = " choose to resize the viewer framebuffer by calling vnc_Viewer_setViewerFb()"]
    #[doc = " from this function, for example, to maintain a consistent aspect ratio."]
    #[doc = " This callback is optional."]
    #[doc = ""]
    #[doc = " @param w The width of the server's framebuffer."]
    #[doc = " @param h The height of the server's framebuffer."]
    pub serverFbSizeChanged: ::std::option::Option<
        unsafe extern "C" fn(
            userData: *mut ::std::os::raw::c_void,
            viewer: *mut vnc_Viewer,
            w: ::std::os::raw::c_int,
            h: ::std::os::raw::c_int,
        ),
    >,
    #[doc = " Notification that the given rectangle of the viewer's framebuffer has been"]
    #[doc = " updated with new pixel data.  This callback is optional."]
    pub viewerFbUpdated: ::std::option::Option<
        unsafe extern "C" fn(
            userData: *mut ::std::os::raw::c_void,
            viewer: *mut vnc_Viewer,
            x: ::std::os::raw::c_int,
            y: ::std::os::raw::c_int,
            w: ::std::os::raw::c_int,
            h: ::std::os::raw::c_int,
        ),
    >,
}
#[test]
fn bindgen_test_layout_vnc_Viewer_FramebufferCallback() {
    assert_eq!(
        ::std::mem::size_of::<vnc_Viewer_FramebufferCallback>(),
        16usize,
        concat!("Size of: ", stringify!(vnc_Viewer_FramebufferCallback))
    );
    assert_eq!(
        ::std::mem::align_of::<vnc_Viewer_FramebufferCallback>(),
        8usize,
        concat!("Alignment of ", stringify!(vnc_Viewer_FramebufferCallback))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<vnc_Viewer_FramebufferCallback>())).serverFbSizeChanged
                as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(vnc_Viewer_FramebufferCallback),
            "::",
            stringify!(serverFbSizeChanged)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<vnc_Viewer_FramebufferCallback>())).viewerFbUpdated as *const _
                as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(vnc_Viewer_FramebufferCallback),
            "::",
            stringify!(viewerFbUpdated)
        )
    );
}
extern "C" {
    #[doc = " Sets the framebuffer callback for this viewer."]
    #[doc = ""]
    #[doc = " @param viewer The Viewer."]
    #[doc = " @param callback The new framebuffer callback."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()"]
    #[doc = "     to get the error code."]
    #[doc = ""]
    #[doc = " @retval InvalidArgument"]
    #[doc = "     The callback is invalid"]
    pub fn vnc_Viewer_setFramebufferCallback(
        viewer: *mut vnc_Viewer,
        callback: *const vnc_Viewer_FramebufferCallback,
        userData: *mut ::std::os::raw::c_void,
    ) -> vnc_status_t;
}
extern "C" {
    #[doc = " Sets the viewer framebuffer.  The pixel data received from the server will"]
    #[doc = " be rendered into the buffer in the given pixel format, scaled to fit the"]
    #[doc = " given size, and with the given stride."]
    #[doc = ""]
    #[doc = " @param viewer The Viewer."]
    #[doc = " @param pixels Pointer to the framebuffer to receive pixel data.  The buffer"]
    #[doc = "     must be large enough, i.e.  stride * height pixels.  Alternatively, pass"]
    #[doc = "     NULL for a buffer owned by the SDK to be allocated for you."]
    #[doc = " @param pixelsBytes The size in bytes of the buffer pointed to by @p pixels"]
    #[doc = "     (ignored if @p pixels is NULL)."]
    #[doc = " @param pf Pixel format for the pixel data."]
    #[doc = " @param width The width of the framebuffer."]
    #[doc = " @param height The height of the framebuffer"]
    #[doc = " @param stride The stride of the framebuffer, i.e.  the number of pixels from"]
    #[doc = "     the start of one row to the next.  If specified as zero then the width is"]
    #[doc = "     used.  Note that this is specified in terms of pixels, not bytes."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()"]
    #[doc = "     to get the error code."]
    #[doc = ""]
    #[doc = " @retval InvalidArgument"]
    #[doc = "     @p width or @p height is zero or negative, the stride is invalid, or the"]
    #[doc = "     @p pixels buffer is not large enough"]
    pub fn vnc_Viewer_setViewerFb(
        viewer: *mut vnc_Viewer,
        pixels: *mut ::std::os::raw::c_void,
        pixelsBytes: ::std::os::raw::c_int,
        pf: *const vnc_PixelFormat,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        stride: ::std::os::raw::c_int,
    ) -> vnc_status_t;
}
extern "C" {
    #[doc = " Gets the width of the viewer framebuffer."]
    pub fn vnc_Viewer_getViewerFbWidth(viewer: *mut vnc_Viewer) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets the height of the viewer framebuffer."]
    pub fn vnc_Viewer_getViewerFbHeight(viewer: *mut vnc_Viewer) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets the pixel format of the viewer framebuffer."]
    pub fn vnc_Viewer_getViewerFbPixelFormat(viewer: *mut vnc_Viewer) -> *const vnc_PixelFormat;
}
extern "C" {
    #[doc = " Returns the viewer framebuffer data for the given rectangle.  The returned"]
    #[doc = " object is valid until the next call to vnc_Viewer_getViewerFbData() or"]
    #[doc = " vnc_Viewer_setViewerFb().  The stride of the data is given by"]
    #[doc = " vnc_Viewer_getViewerFbStride()."]
    #[doc = ""]
    #[doc = " @param viewer The Viewer."]
    #[doc = " @param x The left edge of the rectangle."]
    #[doc = " @param y The top edge of the rectangle."]
    #[doc = " @param w The width of the rectangle."]
    #[doc = " @param h The height of the rectangle."]
    #[doc = ""]
    #[doc = " @return Returns the data buffer, or NULL on error, in which case call"]
    #[doc = "     vnc_getLastError() to get the error code."]
    #[doc = ""]
    #[doc = " @retval InvalidArgument"]
    #[doc = "     @c w or @c h are zero or negative, or the rectangle is not fully"]
    #[doc = "     contained within the framebuffer"]
    pub fn vnc_Viewer_getViewerFbData(
        viewer: *mut vnc_Viewer,
        x: ::std::os::raw::c_int,
        y: ::std::os::raw::c_int,
        w: ::std::os::raw::c_int,
        h: ::std::os::raw::c_int,
    ) -> *const vnc_DataBuffer;
}
